#
#  configure.in - ip autoconf input file
# 
#  (c) 2004 Copyright Hewlett-Packard Development Company, LP
#

AC_INIT(hpip, 0.8)
AC_CONFIG_SRCDIR([ipmain.c])
AC_CONFIG_AUX_DIR(..)
AM_INIT_AUTOMAKE(foreign)
AM_MAINTAINER_MODE
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
