#
#  configure.in - prnt autoconf input file
# 
#  (c) 2004 Copyright Hewlett-Packard Development Company, LP
#

AC_INIT(prnt, 0.8)
AC_CONFIG_SRCDIR([pcl.py])
AC_CONFIG_AUX_DIR(..)
AM_INIT_AUTOMAKE(foreign)
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for header files.
AC_CHECK_HEADERS(cups/cups.h, cupsdevel=yes, cupsdevel=no)
if test "$cupsdevel" = "no"; then
   AC_MSG_ERROR([cannot find cups-devel support])
fi

PYTHONSEARCHPATH="python python2.2 python2.3 python2.4"

for i in $PYTHONSEARCHPATH; do
   AC_CHECK_HEADERS("$i/Python.h", python=yes, python=no)
   if test "$python" = "yes"; then
      break
   fi
done
if test "$python" = "no"; then
   AC_MSG_ERROR([cannot find python-devel support])
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
