#
#  Makefile.am - ui automake input file
# 
#  (c) 2004 Copyright Hewlett-Packard Development Company, LP
#

hplipdir = $(datadir)/hplip/ui

hplip_SCRIPTS =  \
    advancedinfoform_base.py \
    advancedinfoform.py \
    alignform.py \
    bothpensrequiredform_base.py \
    bothpensrequiredform.py \
    colorcalform_base.py \
    colorcalform.py \
    coloradjform_base.py \
    coloradjform.py \
    devmgr4_base.py \
    devmgr4.py \
    form1.py \
    failureform.py \
    failureform_base.py \
    __init__.py \
    invalidpenconfigform_base.py \
    invalidpenconfigform.py \
    loadpaperform_base.py \
    loadpaperform.py \
    paperedgealignform_base.py \
    paperedgealignform.py \
    photopenrequiredform_base.py \
    photopenrequiredform.py \
    pleasewaitform_base.py \
    pleasewaitform.py \
    settingsdialog_base.py \
    settingsdialog.py \
    aligntype6form1.py \
    aligntype6form1_base.py \
    aligntype6form2_base.py \
    aligntype6form2.py \
    nodevicesform_base.py \
    nodevicesform.py \
    unloadform.py \
    unloadform_base.py \
    unloadprogressdlg.py \
    imagepropertiesdlg_base.py \
    imagepropertiesdlg.py \
    choosedevicedlg.py \
    successform.py \
    successform_base.py \
    aboutdlg_base.py \
    aboutdlg.py

copy:
	cp -rL $(hplip_SCRIPTS) $(EXTRA_DIST) $(DIST_COMMON) $(COPY_DEST)

.PHONY: copy
