#
#  configure.in - hp cups backend autoconf input file
# 
#  (c) 2004 Copyright Hewlett-Packard Development Company, LP
#

AC_INIT(hp.c)
AM_INIT_AUTOMAKE(hp, 0.80)

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

CUPSSEARCHPATH="/usr/share /usr/local/share /usr/lib /usr/local/lib /usr/libexec /opt"

AC_MSG_CHECKING("for cups backend path")
CUPS_BACKEND_PATH="/usr/lib/cups/backend"
for i in $CUPSSEARCHPATH; do
   if test -d "$i/cups/backend"; then
      CUPS_BACKEND_PATH="$i/cups/backend"
      break
   fi
done
AC_MSG_RESULT("using $CUPS_BACKEND_PATH")
AC_SUBST(CUPS_BACKEND_PATH)

AC_OUTPUT(Makefile)
