#
#  configure.in - HP I/O backend daemon (hpiod) autoconf input file
# 
#  (c) 2004 Copyright Hewlett-Packard Development Company, LP
#

AC_INIT(hpiod.cpp)
AM_INIT_AUTOMAKE(hpiod, 0.80)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries, sets -lpthread, -lcrypto, -lsnmp for LIBS and HAVE_LIBSNMP.
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([crypto], [CRYPTO_free])
AC_CHECK_LIB([snmp], [snmp_timeout],,AC_MSG_WARN(["no network support will be built"]))

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_OUTPUT(Makefile)
